# CliniCore

./: .env  .gitignore  ngrok_runner.py  pyproject.toml
api/v1/ner/: router.py  schemas.py  service.py
api/v1/rag/: router.py  schemas.py  service.py
api/v1/vision/: router.py  schemas.py  service.py
app/: main.py
core/: config.py  embeddings.py  llm.py  vectorstore.py  vision_llm.py
data/indexes/: doc_list.json  index.faiss  index.pkl
frontend/: api_client.py  streamlit_app.py
frontend/pages/: home.py  ner.py  rag.py  vision.py
frontend/pages/__pycache__/: rag.cpython-313.pyc.1638378216880  rag.cpython-313.pyc.2520936577584
