[project]
name = "clincore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # =====================
    # API LAYER
    # =====================
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # =====================
    # LANGCHAIN + LANGGRAPH (CORE)
    # =====================
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.1.0",
    # LLM provider (choose one later: Groq = fast CPU-friendly)
    "langchain-groq>=0.1.5",
    # =====================
    # RAG STACK (CPU OPTIMIZED)
    # =====================
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "pypdf>=4.2.0",
    # =====================
    # NER (CPU inference only)
    # =====================
    "transformers>=4.41.0",
    "torch>=2.3.0",
    "seqeval>=1.2.2",
    # =====================
    # STREAMLIT UI
    # =====================
    "streamlit>=1.36.0",
    # =====================
    # DEPLOYMENT
    # =====================
    "pyngrok>=7.2.0",
    # =====================
    # UTILITIES
    # =====================
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "unstructured>=0.18.32",
    "ngrok>=1.4.0",
]
